# rust-bone

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
memlink/: main.rs
modules/obmm-rs/: .gitignore  Cargo.toml  build.rs
modules/obmm-rs/obmm-sys/: CMakeLists.txt  libobmm.c  libobmm.h  vendor_adaptor.c  vendor_adaptor.h
modules/obmm-rs/src/: lib.rs
tests/: integration_test.rs
