[package]
name = "obmm-rs"
version = "0.1.0"
description = "Rust bindings for OBMM (Open-source Bare-Metal Memory Manager)"
license = "MIT"
keywords = ["obmm", "memory management", "rust bindings"]
categories = ["memory management"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bindgen = "0.72"
bitflags = { version = "2.10", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["hook"]
hook = []